--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,6 +15,8 @@ jobs:
 
       - name: AI Code Reviewer
         uses: ShrutiShukla278/ai-code-reviewer@main
+      - name: AI Code Review Action
+        uses: freeedcom/ai-codereviewer@v2.4.1
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
